remove width and height attribute from img

--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <h1>GeeksforGeeks Github Profile Searcher</h1>
+      <label for="user"></label>
+      <input type="search" id="user" name="user" placeholder="Search a Github User"/>
+      <div class="retrieve">
+	<img src="img/portfolio-icon.png" alt="placeholder for profile picture"/>
+	<div class="card">
+	  <h3>geeksforgeeks</h3>
+	  <span>Followers</span>
+	  <span>Following</span>
+	  <span>Repos</span>
+	  <div class="link"><a href="#">geeksforgeeks.github.io</a></div>
+	</div>
+      </div>
+    </div>
   </body>
 </html>
