Add div container around span elements

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	<img src="img/portfolio-icon.png" alt="placeholder for profile picture"/>
 	<div class="card">
 	  <h3>geeksforgeeks</h3>
-	  <span>Followers</span>
-	  <span>Following</span>
-	  <span>Repos</span>
+	  <div class="results">
+	    <span>Followers</span>
+	    <span>Following</span>
+	    <span>Repos</span>
+	  </div>
 	  <div class="link"><a href="#">geeksforgeeks.github.io</a></div>
 	</div>
       </div>
