--- a/myAttempt/index.html
+++ b/myAttempt/index.html
@@ -11,7 +11,7 @@
       <label for="user"></label>
       <input type="search" id="user" name="user" placeholder="Search a Github User"/>
       <div class="retrieve">
-	<img src="img/portfolio-icon.png" alt="placeholder for profile picture"/>
+	<img src="../img/portfolio-icon.png" alt="placeholder for profile picture"/>
 	<div class="card">
 	  <h3>geeksforgeeks</h3>
 	  <div class="results">
