--- a/solution/index.html
+++ b/solution/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>Github Profile Search</title>
-    <meta charset="utf">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
   </head>
